dev/manifests/3rd-party/minio/service.yaml
---
# Source: minio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: "hornet"
  labels:
    app.kubernetes.io/name: minio
    helm.sh/chart: minio-11.10.3
    app.kubernetes.io/instance: minio
    app.kubernetes.io/managed-by: Helm
  annotations:
    pia-team.com/app: minio
    pia-team.com/app-logo: minio
    pia-team.com/app-title: MinIO
    pia-team.com/role: pia.k8s.minio/0.6.0
spec:
  type: ClusterIP
  ports:
  - name: minio-api
    port: 9000
    targetPort: minio-api
    nodePort:
  - name: minio-console
    port: 9001
    targetPort: minio-console
    nodePort:
  selector:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio
