dev/manifests/3rd-party/minio/networkpolicy.yaml
---
# Source: minio/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: minio
  namespace: "hornet"
  labels:
    app.kubernetes.io/name: minio
    helm.sh/chart: minio-11.10.3
    app.kubernetes.io/instance: minio
    app.kubernetes.io/managed-by: Helm
  annotations:
    pia-team.com/app: minio
    pia-team.com/app-logo: minio
    pia-team.com/app-title: MinIO
    pia-team.com/role: pia.k8s.minio/0.6.0
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: minio
      app.kubernetes.io/instance: minio
  ingress:
    # Allow inbound connections
  - ports:
    - port: 9001
    - port: 9000
